<resources>
    <string name="app_name">Parlay Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moneyline">Moneyline</string>
    <string name="bet_amount">Bet Amount</string>
    <string name="legs">Legs</string>
    <string name="s_n">S.N.</string>
    <string name="profit">Profit</string>
    <string name="total_earning">Total Earning:</string>
    <string name="win_chance">Win Chance:</string>
    <string name="fractional_odds">Fractional Odds:</string>
    <string name="decimal_odds">Decimal Odds:</string>
    <string name="american_odds">American Odds</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="add_parlay_legs_info">Add parlay legs in your selection list</string>
    <string name="selection_s_name">Selection\'s Name</string>
    <string name="option_menu_for_selections">Option menu for selections</string>
    <string name="create_combinations">Create Combinations</string>
    <string name="delete">Delete</string>
    <string name="tickets">Parlay Tickets</string>
    <string name="option_menu_for_combo">Option menu for combo</string>
    <string name="option_menu_for_ticket">Option menu for tickets</string>
</resources>