<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:fontFamily="@font/croissant_one"
            android:text="@string/add_parlay_legs_info"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/selection_name"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_stroke_bg_top_bottom"
            android:fontFamily="@font/bubblegum_sans"
            android:hint="@string/selection_s_name"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/text_color"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:id="@+id/input_team_name"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_stroke_bg_bottom_top"
                android:fontFamily="@font/bubblegum_sans"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_color"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/input_bet_amount"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_stroke_bg_bottom_top"
                android:fontFamily="@font/bubblegum_sans"
                android:hint="@string/bet_amount"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_color"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/input_american_odds"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_stroke_bg_bottom_top"
                android:fontFamily="@font/bubblegum_sans"
                android:hint="@string/american_odds"
                android:inputType="phone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_color"
                android:textSize="12sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/addProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="25dp"
            android:layout_height="27dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/addButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/add"
            android:textColor="@color/text_color"
            app:cornerRadius="16dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>