<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="leg"
            type="com.itheamc.parlaycalculator.models.Leg" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            app:cardBackgroundColor="@color/color_dark"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutDescription="@xml/item_view_xml_constraintlayout2_scene">

                <LinearLayout
                    android:id="@+id/mainContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/sno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/bubblegum_sans"
                            android:text="1."
                            android:textColor="@color/text_color"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/legTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/bubblegum_sans"
                            android:text="@{leg._name}"
                            android:textColor="@color/text_color"
                            android:textSize="14sp"
                            tools:text="ANC" />

                        <TextView
                            android:id="@+id/betsAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/bubblegum_sans"
                            android:text="@{leg._bet_amount}"
                            android:textColor="@color/text_color"
                            android:textSize="14sp"
                            tools:text="$200" />

                        <TextView
                            android:id="@+id/americanOdds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/bubblegum_sans"
                            android:text="@{leg._american_odds}"
                            android:textColor="@color/text_color"
                            android:textSize="14sp"
                            tools:text="-150" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/stroke_color"
                    app:layout_constraintBottom_toBottomOf="@+id/mainContainer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/collapseContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainContainer">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/decimalOddsLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@string/decimal_odds"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/fractionalOddsLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@string/fractional_odds"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/winChanceLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@string/win_chance"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/totalEarningLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@string/total_earning"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/profitLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@string/profit"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="bold|italic" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/decimalOdds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@{String.format(`Decimal Odds:  %s%`, String.valueOf(leg._decimal_odds))}"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="italic"
                            tools:text="2.5" />

                        <TextView
                            android:id="@+id/fractionalOdds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@{String.format(`Fractional Odds:  %s`, leg._fractional_odds)}"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="italic"
                            tools:text="5/2" />

                        <TextView
                            android:id="@+id/winChance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@{String.format(`Win Chance:  %s`, String.valueOf(leg._win_chance))}"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="italic"
                            tools:text="49%" />

                        <TextView
                            android:id="@+id/totalEarning"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@{String.format(`Total Earning:  %s`, String.valueOf(leg._total_earning))}"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="italic"
                            tools:text="$1200" />

                        <TextView
                            android:id="@+id/profit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/baumans"
                            android:text="@{String.format(`Profit:  %s`, String.valueOf(leg._profit))}"
                            android:textColor="@color/teal_200"
                            android:textSize="12sp"
                            android:textStyle="italic"
                            tools:text="$1000" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.motion.widget.MotionLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>